--- a/view/index.html
+++ b/view/index.html
@@ -21,6 +21,7 @@
 								<li><a href="activity">活動</a></li>
 								<li><a href="chatroom">聊天室</a></li>
 								<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
+								<li><a href="page_upload">發布新貼文</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -56,7 +57,7 @@
 							<article class="post">
 								<header>
 									<div class="title">
-										<h2><a href="single.html"></a>秘境森林</h2>
+										<h2><a href="#">秘境森林</a></h2>
 										<p>近期排行第一人氣作品</p>
 									</div>
 									<div class="meta">
@@ -64,13 +65,12 @@
 										<a href="#" class="author"><span class="name">小香菇</span><img src="avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="single.html" class="image featured"><img src="whethering_cover.jpg" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat.Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+								<a href="#" class="image featured"><img src="tree.jpg" alt="" /></a>
+								<p>最近在論壇上掀起一陣熱潮的作品...</p>
 								<footer>
 									<ul class="stats">
 										<li><div class="like_button"><button><a class="icon solid fa-heart"  id="like1"><span class="count">528</span></a></button></div class="like_button"></li>
 										<li><a href="public_some" class="icon solid fa-comment">128</a></li>
-										<li><a href="#">Report</a></li>
 									</ul>
 								</footer>
 							</article>
@@ -79,21 +79,20 @@
 							<article class="post">
 								<header>
 									<div class="title">
-										<h2><a href="single.html">XX老師新作品</a></h2>
-										<p></p>
+										<h2><a href="#">XX老師新作品</a></h2>
+										<p>粉絲福利</p>
 									</div>
 									<div class="meta">
 										<time class="published" datetime="2019-10-25">October 25, 2019</time>
-										<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
+										<a href="#" class="author"><span class="name">大老師</span><img src="avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="single.html" class="image featured"><img src="pic02.jpg" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper.</p>
+								<a href="#" class="image featured"><img src="whethering_cover.jpg" alt="" /></a>
+								<p>XX老師又出新作，內容簡直是粉絲福利啊</p>
 								<footer>
 									<ul class="stats">
 										<li><div class="like_button2"><button><a class="icon solid fa-heart" id="like2"><span class="count2">96</span></a></button></div class="like_button"></li>
 										<li><a href="public_some" class="icon solid fa-comment">13</a></li>
-										<li><a href="#">Report</a></li>
 									</ul>
 								</footer>
 							</article>
@@ -103,28 +102,22 @@
 								<header>
 									<div class="title">
 										<h2><a href="post_18">研究顯示：打飛機治百病</a></h2>
-										<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+										<p>英國研究指出，嚕管次數與健康程度成正比</p>
 									</div>
 									<div class="meta">
 										<time class="published" datetime="2019-10-22">October 22, 2019</time>
-										<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
+										<a href="#" class="author"><span class="name">老司機</span><img src="avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="single.html" class="image featured"><img src="/pic03.jpg" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Cras vehicula tellus eu ligula viverra, ac fringilla turpis suscipit. Quisque vestibulum rhoncus ligula.</p>
+								<a href="post_18" class="image featured"><img src="/pic03.jpg" alt="" /></a>
+								<p>打手槍是許多男性排解慾望的方式，但到底多久打一次手槍比較適當呢.....</p>
 								<footer>
 									<ul class="stats">
 										<li><div class="like_button3"><button><a class="icon solid fa-heart" id="like3"><span class="count3">42</span></a></button></div class="like_button"></li>
 										<li><a href="public_some" class="icon solid fa-comment">11</a></li>
-										<li><a href="#">Report</a></li>
 									</ul>
 								</footer>
 							</article>
-						<!-- Pagination -->
-							<ul class="actions pagination">
-								<li><a href="" class="disabled button large previous">Previous Page</a></li>
-								<li><a href="#" class="button large next">Next Page</a></li>
-							</ul>
 
 					</div>
 		<!-- Scripts -->
