--- a/view/post_18.html
+++ b/view/post_18.html
@@ -62,18 +62,19 @@
 								<p>英國研究指出，嚕管次數與健康程度成正比</p>
 							</div>
 							<div class="meta">
-								<time class="published" datetime="2019-12-05">December 5, 2019</time>
-								<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
+								<time class="published" datetime="2019-10-22">October 22, 2019</time>
+								<a href="#" class="author"><span class="name">老司機</span><img src="avatar.jpg" alt="" /></a>
 							</div>
 						</header>
-						<span class="image featured"><img src="pic01.jpg" alt="" /></span>
-						<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-						<p>Nunc quis dui scelerisque, scelerisque urna ut, dapibus orci. Sed vitae condimentum lectus, ut imperdiet quam. Maecenas in justo ut nulla aliquam sodales vel at ligula. Sed blandit diam odio, sed fringilla lectus molestie sit amet. Praesent eu tortor viverra lorem mattis pulvinar feugiat in turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce ullamcorper tellus sit amet mattis dignissim. Phasellus ut metus ligula. Curabitur nec leo turpis. Ut gravida purus quis erat pretium, sed pellentesque massa elementum. Fusce vestibulum porta augue, at mattis justo. Integer sed sapien fringilla, dapibus risus id, faucibus ante. Pellentesque mattis nunc sit amet tortor pellentesque, non placerat neque viverra. </p>
+						<span class="image featured"><img src="pic03.jpg" alt="" /></span>
+						<p>打手槍是許多男性排解慾望的方式，但到底多久打一次手槍比較適當呢，唐代「藥王」孫思邈曾依照年齡給出建議，60歲就別再打了。
+							香港《蘋果日報》報導，對於是否需要禁慾以保健康，香港中醫師徐擇昌表示，中醫並不主張禁慾，而是主張「慾不可絕，慾不可縱」，適當的性生活對人的健康有益，但若太過沉迷，就會傷害中醫所謂的「腎」。
+
+							綜合媒體報導，另有不少醫生推薦射精頻率公式，也就是將年齡的十位數字乘以9，得出的答案十位數為週，個位數則為次數，例如30歲男子就是「3*9＝27」、2週7次。</p>
 						<footer>
 							<ul class="stats">
-								<li><a href="#">General</a></li>
-								<li><a href="#" class="icon solid fa-heart">28</a></li>
-								<li><a href="#" class="icon solid fa-comment">128</a></li>
+								<li><div class="like_button3"><button><a class="icon solid fa-heart" id="like3"><span class="count3">42</span></a></button></div class="like_button"></li>
+								<li><a href="public_some" class="icon solid fa-comment">11</a></li>
 							</ul>
 						</footer>
 					</article>
@@ -86,6 +87,6 @@
 			<script src="breakpoints.min.js"></script>
 			<script src="util.js"></script>
 			<script src="main.js"></script>
-
+			<script src="click_like.js"></script>
 	</body>
 </html>
