--- a/view/chatroom.html
+++ b/view/chatroom.html
@@ -1,21 +1,22 @@
 <!DOCTYPE HTML>
 <html>
-	<!--CSS，加載在 head 之前-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
- 
+
 <!--JavaScript，加載在 body 之前-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>
 <head>
-	<title>Future Imperfect by HTML5 UP</title>
+	
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="main.css" type="text/css" />
     <title>My Chatroom</title>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/static/js/chat.js"></script>
     <script>
         var socket = io();
     </script>
+
+    <!--聊天室框架-->>
     <style>
         html, body {
             padding: 0;
@@ -138,6 +139,7 @@
                     <div id="status-box">Server: <span id="status">-</span> / <span id="online">0</span> online.</div>
                     <div id="content">
                     </div>
+                    <!--輸入-->
                     <div id="send-box">
                         <form id="send-form">
                             <input type="text" name="name" id="name" placeholder="暱稱">
@@ -148,25 +150,27 @@
                 </div>
             
                 <script>
+                    //顯示聊天資料
                     document.addEventListener("DOMContentLoaded", () => {
-            
+                        // 當收到伺服器回傳的事件
+                        // 將內容轉到container中呈現
                         var status = document.getElementById("status");
                         var online = document.getElementById("online");
                         var sendForm = document.getElementById("send-form");
                         var content = document.getElementById("content");
-            
+                        // 當發生連線事件
                         socket.on("connect", function () {
                             status.innerText = "Connected.";
                         });
-            
+                        //當發生離線事件
                         socket.on("disconnect", function () {
                             status.innerText = "Disconnected.";
                         });
-            
+                        //
                         socket.on("online", function (amount) {
                             online.innerText = amount;
                         });
-            
+                        //顯示歷史紀錄
                         socket.on("msg", function (d) {
                             var msgBox = document.createElement("div")
                                 msgBox.className = "msg";
@@ -210,20 +214,6 @@
                 </script>
 			</div>
 
-		<!-- Scripts -->
-			<script src="jquery.min.js"></script>
-			<script src="browser.min.js"></script>
-			<script src="breakpoints.min.js"></script>
-			<script src="util.js"></script>
-			<script src="main.js"></script>
-			<script src="showmore.js"></script>
-			<script src="picslideshow.js"></script>
-			<script src="chat.js"></script>
-			<script>
-				$('#myModal').on('shown.bs.modal', function () {
-		  			$('#myInput').trigger('focus')
-				})
-			</script>
-
+		
 	</body>
 </html>
