活動頁面(管理員_V1)

--- a/view/activity_manager.html
+++ b/view/activity_manager.html
@@ -63,20 +63,20 @@
 					<header>
 						<div class="title">
 							<div>
+                                <h1>活動管理<br></h1>
 								<ul class="actions fit">
 						    		&emsp;
 					    			<li><a href="activity" class="button fit">最新活動</a></li>
 									<li><a href="activity_coming" class="button fit">近期活動</a></li>
 									<li><a href="activity_old" class="button fit">歷史活動</a></li>
-									<li><a onclick="Manager()" class="button fit">活動管理</a></li>
+									<li><a href="activity_manager" class="button fit">活動管理</a></li>
 								</ul>
 							</div>
 						</div>
-	    	        </header> 
+					</header> 
                         
                 <!-- Post -->
 					<ul class="showMoreNChildren" pagesize="1">
-					<!--
 						<article class="post">
 							<header>
 								<div class="title">
@@ -101,6 +101,7 @@
 								</ul>
 							</footer>
 						</article>
+					<!--
 						<article class="post">
 							<header>
 								<div class="title">
