--- a/view/activity_manager_application.html
+++ b/view/activity_manager_application.html
@@ -11,6 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="main.css" type="text/css" />
+	<link rel="stylesheet" href="managerform.css" type="text/css" />
 </head>
 <body class="is-preload">
 
@@ -22,7 +23,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity">活動</a></li>
+							<li><a href="activity"><strong>活動</strong></a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
@@ -58,7 +59,30 @@
                     
 			<!-- Main -->
 		    	<div id="main">     
-
+					<article class="post">
+						<form>
+							<div class="title">
+								<h1>申請管理員</h1>
+							    <hr>
+						  
+							    <label for="email"><b>Email</b></label>
+							    <input type="text" placeholder="Enter Email" name="email" required>
+						  
+							    <label for="psw"><b>Password</b></label>
+							    <input type="password" placeholder="Enter Password" name="psw" required>
+						  
+							    <label for="psw-repeat"><b>Repeat Password</b></label>
+							    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+							  
+							    <p><strong><br>通過申请管理员，即表示您同意我们的<a href="#" style="color:dodgerblue">条款和隐私</a>。</strong></p>
+						  
+								<ul class="actions fit">
+									<li><a type="button" onclick="Giveup()" class="button fit">返回</a></li>
+									<li><a type="button" onclick="Complete()" class="button fit">完成</a></li>
+								</ul>
+							</div>
+						  </form>
+					</article>
 		    	</div>                             
 		</div>
 
