--- a/view/activity_coming.html
+++ b/view/activity_coming.html
@@ -22,7 +22,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity"><strong>活動</strong></a></li>
+							<li><a href="activity">活動</a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
