--- a/view/activity.html
+++ b/view/activity.html
@@ -22,7 +22,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity"><strong>活動</strong></a></li>
+							<li><a href="activity">活動</a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
@@ -73,34 +73,7 @@
 							</div>
 						</div>
 					</header> 
-					<section>
-						<h3>Buttons</h3>
-						<ul class="actions">
-							<li><a href="#" class="button large">Large</a></li>
-							<li><a href="#" class="button">Default</a></li>
-							<li><a href="#" class="button small">Small</a></li>
-						</ul>
-						<ul class="actions fit">
-							<li><a href="#" class="button fit">Fit</a></li>
-							<li><a href="#" class="button fit">Fit</a></li>
-							<li><a href="#" class="button fit">Fit</a></li>
-						</ul>
-						<ul class="actions fit small">
-							<li><a href="#" class="button fit small">Fit + Small</a></li>
-							<li><a href="#" class="button fit small">Fit + Small</a></li>
-							<li><a href="#" class="button fit small">Fit + Small</a></li>
-						</ul>
-						<ul class="actions">
-							<li><a href="#" class="button icon solid fa-download">Icon</a></li>
-							<li><a href="#" class="button icon solid fa-upload">Icon</a></li>
-							<li><a href="#" class="button icon solid fa-save">Icon</a></li>
-						</ul>
-						<ul class="actions">
-							<li><span class="button disabled">Disabled</span></li>
-							<li><span class="button disabled icon solid fa-download">Disabled</span></li>
-						</ul>
-					</section>
-                        
+          
                 <!-- Post -->
 					<ul class="showMoreNChildren" pagesize="1">
 						<article class="post">
