--- a/view/activity_change.html
+++ b/view/activity_change.html
@@ -20,12 +20,12 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a onclick="Giveup_index()">萍水相逢</a></h1>
+					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a onclick="Giveup()">活動</a></li>
-							<li><a onclick="Giveup_chat()">聊天室</a></li>
-							<li><a onclick="Giveup_personality()">個人主頁</a></li>
+							<li><a href="activity">活動</a></li>
+							<li><a href="chatroom">聊天室</a></li>
+							<li><a href="personality">個人主頁</a></li>
 						</ul>
 					</nav>
 					<nav class="main">
