--- a/view/activity_manager.html
+++ b/view/activity_manager.html
@@ -22,7 +22,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity"><strong>活動</strong></a></li>
+							<li><a href="activity">活動</a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
@@ -63,13 +63,13 @@
 					<header>
 						<div class="title">
 							<div>
-                                <h1>活動管理<br></h1>
+                                <h1>&emsp;活動管理<br></h1>
 								<ul class="actions fit">
 						    		&emsp;
-					    			<li><a href="activity" class="button fit">最新活動</a></li>
-									<li><a href="activity_coming" class="button fit">近期活動</a></li>
-									<li><a href="activity_old" class="button fit">歷史活動</a></li>
-									<li><a href="activity_manager" class="button fit">活動管理</a></li>
+					    			<li><a href="activity_add" class="button fit">新增活動</a></li>
+									<li><a href="activity_change" class="button fit">修改活動</a></li>
+									<li><a href="activity_delete" class="button fit">刪除活動</a></li>
+									<li><a href="activity_login" class="button fit">返回活動頁面</a></li>
 								</ul>
 							</div>
 						</div>
