--- a/view/discard_t.html
+++ b/view/discard_t.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Future Imperfect by HTML5 UP</title>
+        <title>萍水相逢</title>
 		<meta charset="utf-8" />
         <link rel="stylesheet" href="main.css" type="text/css" />
     </head>
