活動頁面(修改網址)

--- a/view/activity_add.html
+++ b/view/activity_add.html
@@ -23,7 +23,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity">活動</a></li>
+							<li><a href="activity_login">活動</a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
@@ -77,8 +77,8 @@
 							    <p><strong><br>通過申请管理员，即表示您同意我们的<a href="#" style="color:dodgerblue">条款和隐私</a>。</strong></p>
 						  
 								<ul class="actions fit">
-									<li><a type="button" onclick="Giveup()" class="button fit">返回</a></li>
-									<li><a type="button" onclick="Complete()" class="button fit">完成</a></li>
+									<li><a type="button" onclick="Giveup_add()" class="button fit">返回</a></li>
+									<li><a type="button" onclick="Complete_add()" class="button fit">完成</a></li>
 								</ul>
 							</div>
 						  </form>
@@ -93,7 +93,7 @@
 		<script src="util.js"></script>
 		<script src="main.js"></script>
 		<script src="showmore.js"></script>
-		<script src="picslideshow.js"></script>
+		<script src="activity_m.js"></script>
 		<script src="alert.js"></script>
 		<script>
 			$('#myModal').on('shown.bs.modal', function () {
