--- a/view/activity_old.html
+++ b/view/activity_old.html
@@ -189,7 +189,7 @@
 		<script src="util.js"></script>
 		<script src="main.js"></script>
 		<script src="showmore.js"></script>
-		<script src="picslideshow.js"></script>
+		<script src="activity_m.js"></script>
 		<script src="alert.js"></script>
 		<script>
 			$('#myModal').on('shown.bs.modal', function () {
