--- a/view/activity_delete.html
+++ b/view/activity_delete.html
@@ -23,7 +23,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity">活動</a></li>
+							<li><a href="activity_login">活動</a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
@@ -93,7 +93,7 @@
 		<script src="util.js"></script>
 		<script src="main.js"></script>
 		<script src="showmore.js"></script>
-		<script src="picslideshow.js"></script>
+		<script src="activity_m.js"></script>
 		<script src="alert.js"></script>
 		<script>
 			$('#myModal').on('shown.bs.modal', function () {
