--- a/view/activity_manager_application.html
+++ b/view/activity_manager_application.html
@@ -93,7 +93,7 @@
 		<script src="util.js"></script>
 		<script src="main.js"></script>
 		<script src="showmore.js"></script>
-		<script src="picslideshow.js"></script>
+		<script src="activity_m.js"></script>
 		<script src="alert.js"></script>
 		<script>
 			$('#myModal').on('shown.bs.modal', function () {
