活動頁面(修改網址_2)

--- a/view/activity_coming.html
+++ b/view/activity_coming.html
@@ -68,7 +68,7 @@
 					    			<li><a href="activity" class="button fit">最新活動</a></li>
 									<li><a href="activity_coming" class="button fit">近期活動</a></li>
 									<li><a href="activity_old" class="button fit">歷史活動</a></li>
-									<li><a href="activity_manager" class="button fit">活動管理</a></li>
+									<li><a onclick="Manager()" class="button fit">活動管理</a></li>
 								</ul>
 							</div>
 						</div>
