--- a/view/activity_coming_on.html
+++ b/view/activity_coming_on.html
@@ -22,7 +22,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity_login">活動</a></li>
+							<li><a href="activity">活動</a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
@@ -124,58 +124,6 @@
 								</ul>
 							</footer>
 						</article>
-						<article class="post">
-							<header>
-								<div class="title">
-									<h2><a href="https://travel.taichung.gov.tw/zh-tw/Event/ActivityDetail/4936/2020%E5%8F%B0%E7%81%A3%E7%87%88%E6%9C%83" target="_blank">台灣燈會2020「璀璨台中」</a></h2>
-									<p> 台中好吃、好玩又好買，歡迎海內外民眾來台中賞燈遊玩。 </p>
-								</div>
-								<div class="meta">
-									<time class="published" datetime="2019-12-21">December 21, 2019</time>
-									<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
-								</div>
-							</header>
-							<a href="https://travel.taichung.gov.tw/zh-tw/Event/ActivityDetail/4936/2020%E5%8F%B0%E7%81%A3%E7%87%88%E6%9C%83" target="_blank" class="image featured"><img src="https://travel.taichung.gov.tw/Utility/DisplayImage?id=30743" alt="" /></a>
-							<p>日期&ensp;:&ensp;2020年2月8號&ensp;~&ensp;2020年2月23號&nbsp;(主展區「森林秘境、藝想世界」)<br>&emsp;&emsp;&emsp;&nbsp;2019年12月21號&nbsp;~&nbsp;2020年2月23號&nbsp;(副展區「童趣樂園」)<br>地點&ensp;:&ensp;后里森林園區、馬場園區展出&nbsp;(主展區「森林秘境、藝想世界」)<br>&emsp;&emsp;&emsp;&nbsp;文心森林公園&nbsp;(副展區「童趣樂園」)</p>
-							<p>2020台灣燈會在臺中，首創場域主題策展，利用場域特性，以城市特色為核心，規劃三大主題。包括主展區的森林園區-「森林秘境」，以倡議社區與環境共存的里山大地為始，融入生態永續、藝術美學政策規劃，並結合象徵多元族群、信仰融合的主題燈區。馬場園區命名「藝想世界」，以台灣燈會「民俗文化根，傳統國際化」宗旨為基礎，規劃傳統花燈結合機械動態；科技與多媒體應用，再造燈藝經典。副展區文心森林公園-命名「童趣樂園」，以親子共遊、童趣歡樂為題，策劃多項主題燈區及表演節目，打造市中心的兒童森林樂園。其中，副展區將提前於今年12月底開燈，期間更跨過耶誕節和春節兩大重要節慶，讓更多童趣的歡樂氛圍感染整個臺中。</p>
-							<div>
-							    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.7584801151224!2d120.64331531482334!3d24.145118584396354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d9555555555%3A0x684405b48b3d9796!2sWen-Xin%20Forest%20Park!5e0!3m2!1sen!2stw!4v1577297239758!5m2!1sen!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-							</div>
-							<footer>
-								<ul class="stats">
-									<li><a href="https://www.google.com/maps/place/Wen-Xin+Forest+Park/@24.1451186,120.6433153,17z/data=!3m1!4b1!4m5!3m4!1s0x34693d9555555555:0x684405b48b3d9796!8m2!3d24.1451186!4d120.645504" target="_blank">地址:408台中市南屯區文心路一段</a></li>
-									<li><a href="#" class="icon solid fa-heart">537</a></li>
-									<li><a href="#" class="icon solid fa-comment">411</a></li>
-									<li><a href="#">回饋</a></li>
-								</ul>
-							</footer>
-						</article>
-						<article class="post">
-							<header>
-								<div class="title">
-									<h2><a href="https://udn.com/news/story/7934/4172685" target="_blank">2019台中耶誕夢想世界</a></h2>
-									<p> 集結迪士尼最熱門的角色，全化身燈節裝置。 </p>
-								</div>
-								<div class="meta">
-									<time class="published" datetime="2019-12-6">December 6, 2019</time>
-									<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
-								</div>
-							</header>
-							<a href="https://udn.com/news/story/7934/4172685" target="_blank" class="image featured"><img src="https://pgw.udn.com.tw/gw/photo.php?u=https://uc.udn.com.tw/photo/2019/11/18/99/7083556.jpg&x=&y=&sw=&sh=&exp=3600" alt="" /></a>
-							<p>日期&ensp;:&ensp;2019年12月6號&ensp;~&ensp;2020年1月1號<br>地點&ensp;:&ensp;台中舊火車站站前廣場、綠川水岸廊道、柳川水岸步道</p>
-							<p>2019台中耶誕夢想世界大走迪士尼風，以擁有百年歷史的舊火車站站前廣場、綠川水岸廊道與柳川水岸步道等3大展區為主，可見到米奇、米妮、小熊維尼、唐老鴨、白雪公主等經典角色，化身成耶誕燈節裝置。此外，台中耶誕夢想世界在活動期間，將安排燈光秀與音樂演出，粉絲可把握時間前往。</p>
-							<div>
-							    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.938177065868!2d120.68502426498887!3d24.138809184399367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3d78c61f2f4e621!2sTaichung%20Old%20station!5e0!3m2!1sen!2stw!4v1577342942017!5m2!1sen!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-							</div>
-							<footer>
-								<ul class="stats">
-									<li><a href="https://www.google.com/maps/place/Taichung+Old+station/@24.1388092,120.6850243,17z/data=!4m8!1m2!2m1!1z6IiK5Y-w5Lit54Gr6LuK56uZ56uZ5YmN5buj5aC0!3m4!1s0x0:0x3d78c61f2f4e621!8m2!3d24.1369252!4d120.6852329" target="_blank">地址:400台中市中區台灣大道一段1號</a></li>
-									<li><a href="#" class="icon solid fa-heart">819</a></li>
-									<li><a href="#" class="icon solid fa-comment">673</a></li>
-									<li><a href="#">回饋</a></li>
-								</ul>
-							</footer>
-						</article>
 					</ul>
 				</div>
 		</div>
@@ -194,6 +142,5 @@
 	  			$('#myInput').trigger('focus')
 			})
 		</script>
-
 	</body>
 </html>
