--- a/view/activity_manager.html
+++ b/view/activity_manager.html
@@ -69,7 +69,7 @@
 					    			<li><a href="activity_add" class="button fit">新增活動</a></li>
 									<li><a href="activity_change" class="button fit">修改活動</a></li>
 									<li><a href="activity_delete" class="button fit">刪除活動</a></li>
-									<li><a href="activity_login" class="button fit">返回活動頁面</a></li>
+									<li><a href="activity_manager_on" class="button fit">返回活動頁面</a></li>
 								</ul>
 							</div>
 						</div>
