活動頁面(修改網址_3)

--- a/view/activity_login.html
+++ b/view/activity_login.html
@@ -68,7 +68,7 @@
 					    			<li><a href="activity_login" class="button fit">最新活動</a></li>
 									<li><a href="activity_coming_on" class="button fit">近期活動</a></li>
 									<li><a href="activity_old_on" class="button fit">歷史活動</a></li>
-									<li><a href="activity_add_on" class="button fit">活動管理</a></li>
+									<li><a onclick="ok_login()" class="button fit">活動管理</a></li>
 								</ul>
 							</div>
 						</div>
