--- a/view/activity_manager_on.html
+++ b/view/activity_manager_on.html
@@ -22,7 +22,7 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="activity">活動</a></li>
+							<li><a href="activity_manager_on">活動</a></li>
 							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
@@ -65,10 +65,10 @@
 							<div>
 								<ul class="actions fit">
 						    		&emsp;
-					    			<li><a href="activity" class="button fit">最新活動</a></li>
+					    			<li><a href="activity_manager_on" class="button fit">最新活動</a></li>
 									<li><a href="activity_coming" class="button fit">近期活動</a></li>
 									<li><a href="activity_old_on" class="button fit">歷史活動</a></li>
-									<li><a href="manager" class="button fit">活動管理</a></li>
+									<li><a onclick="ok()" class="button fit">活動管理</a></li>
 								</ul>
 							</div>
 						</div>
