--- a/view/activity_change.html
+++ b/view/activity_change.html
@@ -77,7 +77,7 @@
 							    <p><strong><br>通過申请管理员，即表示您同意我们的<a href="#" style="color:dodgerblue">条款和隐私</a>。</strong></p>
 						  
 								<ul class="actions fit">
-									<li><a type="button" onclick="Giveup()" class="button fit">返回</a></li>
+									<li><a type="button" onclick="Giveup_all()" class="button fit">返回</a></li>
 									<li><a type="button" onclick="Complete()" class="button fit">完成</a></li>
 								</ul>
 							</div>
