活動頁面(修改網址_4)

--- a/view/activity_change.html
+++ b/view/activity_change.html
@@ -78,7 +78,7 @@
 						  
 								<ul class="actions fit">
 									<li><a type="button" onclick="Giveup_all()" class="button fit">返回</a></li>
-									<li><a type="button" onclick="Complete()" class="button fit">完成</a></li>
+									<li><a type="button" onclick="Complete_change()" class="button fit">完成</a></li>
 								</ul>
 							</div>
 						  </form>
