--- a/view/activity_delete_on.html
+++ b/view/activity_delete_on.html
@@ -63,16 +63,17 @@
 					<header>
 						<div class="title">
 							<div>
+                                <h1>&emsp;活動管理<br></h1>
 								<ul class="actions fit">
 						    		&emsp;
-					    			<li><a href="activity_login" class="button fit">最新活動</a></li>
-									<li><a href="activity_coming_on" class="button fit">近期活動</a></li>
-									<li><a href="activity_old_on" class="button fit">歷史活動</a></li>
-									<li><a onclick="ok_login()" class="button fit">活動管理</a></li>
+					    			<li><a href="activity_add" class="button fit">新增活動</a></li>
+									<li><a href="activity_change" class="button fit">修改活動</a></li>
+									<li><a href="activity_delete" class="button fit">刪除活動</a></li>
+									<li><a href="activity_login" class="button fit">返回活動頁面</a></li>
 								</ul>
 							</div>
 						</div>
-	    	        </header> 
+					</header> 
                         
                 <!-- Post -->
 					<ul class="showMoreNChildren" pagesize="1">
