活動頁面建立(新增,修改,刪除)

--- a/view/activity_add.html
+++ b/view/activity_add.html
@@ -62,22 +62,23 @@
 					<article class="post">
 						<form>
 							<div class="title">
-								<h1>申請管理員</h1>
+								<h1>新增活動</h1>
 							    <hr>
-						  
-							    <label for="email"><b>Email</b></label>
-							    <input type="text" placeholder="Enter Email" name="email" required>
-						  
-							    <label for="psw"><b>Password</b></label>
-							    <input type="password" placeholder="Enter Password" name="psw" required>
-						  
-							    <label for="psw-repeat"><b>Repeat Password</b></label>
-							    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-							  
-							    <p><strong><br>通過申请管理员，即表示您同意我们的<a href="#" style="color:dodgerblue">条款和隐私</a>。</strong></p>
-						  
+							    <label><b>大標題</b></label>
+							    <input type="text" placeholder="Enter Big Title" value="【2020台中跨年】跨年晚會-太平區">
+							    <label><b>小標題</b></label>
+							    <input type="text" placeholder="Enter Small Title" value="「SHINING！嗨玩台中2020跨年狂歡夜」">
+							    <label><b>時間</b></label>
+								<input type="text" placeholder="Enter Date">
+							    <label><b>地點</b></label>
+								<input type="text" placeholder="Enter place">	
+								<label><b>介紹</b></label>
+								<input type="text" placeholder="Enter Introduction" value="號稱全台最盛大的跨年狂歡活動，就在台中了！因為今年主辦單位擴大規劃，主要會分成「后里」與「太平」兩個現場，一個在后里的麗寶樂園第二停車場，另一個則是在太平運動場舉行，兩個地方同步跨年，邀請的卡司也超過40組，讓兩地的跨年氣氛，歡騰蔓延至整個大台中地區！其中后里現場晚上6點就開始，除了獨家演出的王心凌、陪倒數的徐佳瑩，還有首度於跨年開唱的綜藝天王吳宗憲。">
+								<b>上傳海報</b>
+								<input type="file" value="image1637055187518550172.jpg">
+								<br><br>
 								<ul class="actions fit">
-									<li><a type="button" onclick="Giveup_all()" class="button fit">返回</a></li>
+									<li><a type="button" onclick="Giveup_add()" class="button fit">返回</a></li>
 									<li><a type="button" onclick="Complete_add()" class="button fit">完成</a></li>
 								</ul>
 							</div>
