--- a/view/activity_change_choice.html
+++ b/view/activity_change_choice.html
@@ -62,24 +62,19 @@
 					<article class="post">
 						<form>
 							<div class="title">
-								<h1>修改活動</h1>
+								<h1>點選修改活動</h1>
 							    <hr>
-							    <label><b>大標題</b></label>
-							    <input type="text" placeholder="Enter Big Title" value="【2020台中跨年】跨年晚會-太平區">
-							    <label><b>小標題</b></label>
-							    <input type="text" placeholder="Enter Small Title" value="「SHINING！嗨玩台中2020跨年狂歡夜」">
-							    <label><b>時間</b></label>
-								<input type="text" placeholder="Enter Date" value="2019年12月31號">
-							    <label><b>地點</b></label>
-								<input type="text" placeholder="Enter place" value="太平區運動場">	
-								<label><b>介紹</b></label>
-								<input type="text" placeholder="Enter Introduction" value="號稱全台最盛大的跨年狂歡活動，就在台中了！因為今年主辦單位擴大規劃，主要會分成「后里」與「太平」兩個現場，一個在后里的麗寶樂園第二停車場，另一個則是在太平運動場舉行，兩個地方同步跨年，邀請的卡司也超過40組，讓兩地的跨年氣氛，歡騰蔓延至整個大台中地區！其中后里現場晚上6點就開始，除了獨家演出的王心凌、陪倒數的徐佳瑩，還有首度於跨年開唱的綜藝天王吳宗憲。">
-								<b>上傳海報</b>
-								<input type="file">
-								<br><br>
-								<ul class="actions fit">
-									<li><a type="button" onclick="Giveup_change()" class="button fit">返回</a></li>
-									<li><a type="button" onclick="Complete_change()" class="button fit">完成</a></li>
+									<a type="button" class="button fit">【2020台中跨年】跨年晚會-太平區</a>
+									<p><br></p>
+									<a type="button" class="button fit">五月天 Mayday 2020-跨年場</a>
+									<p><br></p>
+									<a type="button" class="button fit">台灣燈會2020「璀璨台中」2019台中耶誕夢想世界</a>
+									<p><br></p>
+									<a type="button" class="button fit">2019台中耶誕夢想世界</a>
+									<p><br></p>
+								<ul class="actions fit">	
+									<li><a type="button" onclick="Giveup_change_choice()" class="button fit">返回</a></li>
+									<li><a type="button" onclick="Complete_change_choice()" class="button fit">完成</a></li>
 								</ul>
 							</div>
 						  </form>
