--- a/view/activity_delete.html
+++ b/view/activity_delete.html
@@ -62,23 +62,19 @@
 					<article class="post">
 						<form>
 							<div class="title">
-								<h1>申請管理員</h1>
+								<h1>點選刪除活動</h1>
 							    <hr>
-						  
-							    <label for="email"><b>Email</b></label>
-							    <input type="text" placeholder="Enter Email" name="email" required>
-						  
-							    <label for="psw"><b>Password</b></label>
-							    <input type="password" placeholder="Enter Password" name="psw" required>
-						  
-							    <label for="psw-repeat"><b>Repeat Password</b></label>
-							    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-							  
-							    <p><strong><br>通過申请管理员，即表示您同意我们的<a href="#" style="color:dodgerblue">条款和隐私</a>。</strong></p>
-						  
-								<ul class="actions fit">
-									<li><a type="button" onclick="Giveup_all()" class="button fit">返回</a></li>
-									<li><a type="button" onclick="Complete()" class="button fit">完成</a></li>
+									<a type="button" class="button fit">【2020台中跨年】跨年晚會-太平區</a>
+									<p><br></p>
+									<a type="button" class="button fit">五月天 Mayday 2020-跨年場</a>
+									<p><br></p>
+									<a type="button" class="button fit">台灣燈會2020「璀璨台中」2019台中耶誕夢想世界</a>
+									<p><br></p>
+									<a type="button" class="button fit">2019台中耶誕夢想世界</a>
+									<p><br></p>
+								<ul class="actions fit">	
+									<li><a type="button" onclick="Giveup_delete()" class="button fit">返回</a></li>
+									<li><a type="button" onclick="Complete_delete()" class="button fit">完成</a></li>
 								</ul>
 							</div>
 						  </form>
