--- a/view/activity_add_on.html
+++ b/view/activity_add_on.html
@@ -67,7 +67,7 @@
 								<ul class="actions fit">
 						    		&emsp;
 					    			<li><a href="activity_add" class="button fit">新增活動</a></li>
-									<li><a href="activity_change" class="button fit">修改活動</a></li>
+									<li><a href="activity_change_choice" class="button fit">修改活動</a></li>
 									<li><a href="activity_delete" class="button fit">刪除活動</a></li>
 									<li><a href="activity_login" class="button fit">返回活動頁面</a></li>
 								</ul>
@@ -89,7 +89,6 @@
 								</div>
 							</header>
 							<a href="https://newyear2020taichung.com.tw/" target="_blank" class="image featured"><img src="https://res.klook.com/image/upload/fl_lossy.progressive/q_auto/f_auto/blogtw/2019/12/2020%E5%8F%B0%E4%B8%AD%E8%B7%A8%E5%B9%B4%E6%99%9A%E6%9C%83%E5%A4%AA%E5%B9%B3.png" alt="" /></a>
-							<p>日期&ensp;:&ensp;2019年12月31號<br>地點&ensp;:&ensp;太平區運動場</p>
 							<p>號稱全台最盛大的跨年狂歡活動，就在台中了！因為今年主辦單位擴大規劃，主要會分成「后里」與「太平」兩個現場，一個在后里的麗寶樂園第二停車場，另一個則是在太平運動場舉行，兩個地方同步跨年，邀請的卡司也超過40組，讓兩地的跨年氣氛，歡騰蔓延至整個大台中地區！其中后里現場晚上6點就開始，除了獨家演出的王心凌、陪倒數的徐佳瑩，還有首度於跨年開唱的綜藝天王吳宗憲。</p>
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4860.944896350271!2d120.71733294870097!3d24.11576588267874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346922c9b6b13d63%3A0xf83c43d63f48fa7e!2z5aSq5bmz5Y2A6YGL5YuV5aC0!5e0!3m2!1sen!2stw!4v1577299526793!5m2!1sen!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 							<footer>
