個人主頁微修改

--- a/view/discard_v.html
+++ b/view/discard_v.html
@@ -8,7 +8,7 @@
     <body>
 		<div style=" text-align:center">
         <h2 >確定放棄此編輯</h2>
-        <a href="localhost:3003/index">是</a><a href="video_push">&nbsp&nbsp否</a>
+        <a href="localhost:3003/personality">是</a><a href="video_push">&nbsp&nbsp否</a>
         </div>
         
         <script src="jquery.min.js"></script>
