--- a/view/fans.html
+++ b/view/fans.html
@@ -54,17 +54,19 @@
 						<section>
 							<ul>
 								<li>
-									<a href="#" ><img src="pic09.jpg" alt=""/>&nbsp&nbsp pineapple</a>
+									<a href="#" ><img height="110" width="100" src="person1.jpg" alt=""/>&nbsp&nbsp pine</a>
+								</li>
+								<br>
+								<li>
+									<a href="#" ><img height="110" width="100" src="person2.jpg" alt=""/>&nbsp&nbsp apple</a>
+								</li>
+								<br>
+								<li>
+									<a href="#" ><img height="110" width="100" src="person3.jpg" alt=""/>&nbsp&nbsp pineapple</a>
 								</li>
 							</ul>
 						</section>
-						
-						<!-- Pagination -->
-							<ul class="actions pagination">
-								<li><a href="#" class="button">Previous Page</a></li>
-								<li><a href="#" class="button">Next Page</a></li>
-							</ul>
-
+							
 					</div>
 			</div>
 
