--- a/view/upload_success.html
+++ b/view/upload_success.html
@@ -8,7 +8,7 @@
     <body>
             <div  style="text-align:center;">
                 <h2>Upload Success!</h2>
-                <a href="localhost:3003/index">點我回首頁</a>
+                <a href="localhost:3003/personality">點我回個人主頁</a>
             </div>
         <script src="jquery.min.js"></script>
 		<script src="browser.min.js"></script>
