--- a/view/discard.html
+++ b/view/discard.html
@@ -8,7 +8,7 @@
     <body>
 		<div style=" text-align:center">
         <h2 >確定放棄此編輯</h2>
-        <a href="index">是</a><a href="introduction">&nbsp&nbsp否</a>
+        <a href="personality">是</a><a href="introduction">&nbsp&nbsp否</a>
         </div>
         
         <script src="jquery.min.js"></script>
