--- a/view/upload1.html
+++ b/view/upload1.html
@@ -8,7 +8,7 @@
     <body>
 		<div style=" text-align:center">
         <h2 >Upload Success!</h2>
-		<a href="index">點我回首頁</a>
+		<a href="personality">點我回個人主頁</a>
 		</div>
         <script src="jquery.min.js"></script>
 		<script src="browser.min.js"></script>
