--- a/view/index.html
+++ b/view/index.html
@@ -5,9 +5,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" type="text/css" />
+		<link rel="stylesheet" href="right_side.css" type="text/css" />
 		<script>
 			function removeElement(){
 				document.getElementById("18_post").style.display="none";
+			}
+		</script>
+		<script>
+			function showElement(){
+				document.getElementById("18_post").style.display="inline";
 			}
 		</script>
 	</head>
@@ -24,33 +30,14 @@
 								<li><a href="page_upload">發布新貼文</a></li>
 							</ul>
 						</nav>
-						<nav class="main">
+						<nav>
 							<ul>
-								<li class="search">
-									<a class="fa-search" href="#search">Search</a>
-									<form id="search" method="get" action="#">
-										<input type="text" name="query" placeholder="Search" />
-									</form>
-								</li>
-								<li class="menu">
-									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
+								<li><a onclick="removeElement()">禁止顯示18+作品&nbsp;</a></li>
+								<li><a onclick="showElement()">顯示18+作品&nbsp;</a></li>
+								<li><a href="/">Log Out</a></li>
 							</ul>
 						</nav>
 					</header>
-
-				<!-- 側邊選單 -->
-					<section id="menu">
-						<!-- Actions -->
-							<section>
-								<ul class="actions stacked">
-									<li><input type="button" onclick="removeElement()" value="禁止顯示18+作品" /></li>
-								</ul>
-								<ul class="actions stacked">
-									<li><a href="/" class="button large fit">Log Out</a></li>
-								</ul>
-							</section>
-					</section>
 
 					<div id="main">
 						<!-- 主要貼文 -->
