--- a/view/public_some.html
+++ b/view/public_some.html
@@ -5,12 +5,17 @@
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="main.css" type="text/css" />
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+        <script>
+            function discard(){
+                window.history.back(-1);
+            }
+        </script>
     </head>
     <body class="is-preload">
         <div id="wrapper">
             <header id="header">
-                <h1><a href="/">萍水相逢</a></h1>
+                <h1><a href="/index">萍水相逢</a></h1>
 					<nav class="links">
 						<!--<ul>
 							<li><a href="#">活動</a></li>
@@ -28,7 +33,8 @@
 					<form class="form-signin" action="public_success" method="POST">
                         <textarea  cols="50" rows="5" placeholder="留言..."></textarea>
                         <input type="submit" />
-                    </form>
+                        <input type="button" id="press" onclick="discard()" value="取消"/>
+                    </form>   
 			</div>
         </div>
         <script src="jquery.min.js"></script>
