申請管理員

--- a/view/activity_manager_application.html
+++ b/view/activity_manager_application.html
@@ -58,18 +58,17 @@
 							<div class="title">
 								<h1>申請管理員</h1>
 							    <hr>
-						  
-							    <label for="email"><b>Email</b></label>
-							    <input type="text" placeholder="Enter Email" name="email" required>
-						  
-							    <label for="psw"><b>Password</b></label>
-							    <input type="password" placeholder="Enter Password" name="psw" required>
-						  
-							    <label for="psw-repeat"><b>Repeat Password</b></label>
-							    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-							  
+							    <label><b>稱呼(管理員)</b></label>
+							    <input type="text" placeholder="Enter Name" value="XXX">
+							    <label><b>郵件</b></label>
+							    <input type="text" placeholder="Enter Email" value="XXXXXX.gmail.com">
+							    <label><b>手機號碼</b></label>
+								<input type="text" placeholder="Enter Mobile Phone" value="09XX-XXXXXX">
+							    <label><b>地址</b></label>
+								<input type="text" placeholder="Enter Address" value="407...">
+								<label><b>帳號密碼</b></label>
+								<input type="text" placeholder="Enter Account Password" value="********">
 							    <p><strong><br>通過申请管理员，即表示您同意我们的<a href="#" style="color:dodgerblue">条款和隐私</a>。</strong></p>
-						  
 								<ul class="actions fit">
 									<li><a type="button" onclick="Giveup()" class="button fit">返回</a></li>
 									<li><a type="button" onclick="Complete()" class="button fit">完成</a></li>
