--- a/view/post_18.html
+++ b/view/post_18.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="main.css" />
         <script>
-            var check = window.confirm("您即將進入");
+            var check = window.confirm("您即將進入18+作品區，您是否繼續？");
             if(check == true){
                 window.location("index");
                 check = 1;
