--- a/view/activity_delete_on.html
+++ b/view/activity_delete_on.html
@@ -57,6 +57,7 @@
 					    			<li><a href="activity_add" class="button fit">新增活動</a></li>
 									<li><a href="activity_change_choice" class="button fit">修改活動</a></li>
 									<li><a href="activity_delete" class="button fit">刪除活動</a></li>
+									<li><a href="activity_Feedback" class="button fit">活動回饋</a></li>
 									<li><a href="activity_login" class="button fit">返回活動頁面</a></li>
 								</ul>
 							</div>
